--- a/Screens/EncodeScreen/encode_screen.kv
+++ b/Screens/EncodeScreen/encode_screen.kv
@@ -68,7 +68,7 @@
                         icon: "note-text-outline"
                         halign: 'center'
                     MDLabel:
-                        text: "Đọc"
+                        text: "Đọccc"
                         halign: 'center'
                 MDCard:
                     pos_hint: {'center_x': 0.5, 'center_y': 0.44}
@@ -76,6 +76,7 @@
                     padding: '15dp'
                     spacing: '15dp'
                     radius: [16, ]
+                    on_release: root.encode()
                     MDIcon:
                         icon: "lock-reset"
                         halign: 'center'
@@ -88,6 +89,7 @@
                     padding: '15dp'
                     spacing: '15dp'
                     radius: [16, ]
+                    on_release: root.decode()
                     MDIcon:
                         icon: "cog"
                         halign: 'center'
@@ -103,11 +105,23 @@
         icon: "alert-circle"
         halign: 'center'
         theme_text_color: "Error"
-        font_size: "40dp"
+        font_size: "60dp"
     MDLabel:
         text: "Đường dẫn không hợp lệ!!!"
         halign: 'center'
-    MDRaisedButton:
-        text: "Đóng"
-        pos_hint: {'center_x': 0.5}
-        md_bg_color: utils.get_color_from_hex('#116294')
+
+<ModalSuccess>:
+    orientation: "vertical"
+    spacing: "12dp"
+    size_hint_y: None
+    height: "120dp"
+    MDIcon:
+        icon: "check-circle"
+        halign: 'center'
+        theme_text_color: "Custom"
+        text_color: 0, 0.9, 0.5, 1
+        font_size: "60dp"
+    MDLabel:
+        id: "message_success"
+        text: "Thành công!!!"
+        halign: 'center'
